--- a/css/style.css
+++ b/css/style.css
@@ -236,11 +236,11 @@ header{
 /*Add media query to handle reduced-motion*/
 
 /* remove background image, pay attention to footer, do media query*/
-@media screen and (prefers-reduced-motion: reduce){
-.logo{
-  -webkit-animation-name: logo_wiggle;
-  animation-name: logo_wiggle;
-  -webkit-animation-duration: 0s;
-  animation-duration: 0s;
+@media screen and (prefers-reduced-motion: reduce) { 
+#logo{
+   -webkit-animation-name: logo_wiggle; 
+   animation-name: logo_wiggle;
+   -webkit-animation-duration: 0s;
+   animation-duration: 0s;
 }
 }
